# cookiecutter-leetcode

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: test_api.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_uslug }}/: api.py
